# PengWM

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  config.toml
pengwm-daemon/: Cargo.toml
pengwm-daemon/src/: main.rs
pengwm-daemon/src/config/: mod.rs  watcher.rs
pengwm-daemon/src/core/: bsp.rs  geometry.rs  manager.rs  mod.rs  types.rs
pengwm-daemon/src/ipc/: mod.rs
pengwm-daemon/src/platform/: mod.rs
pengwm-daemon/src/platform/macos/: mod.rs
pengwm-daemon/src/platform/windows/: mod.rs
pengwm-ui/: index.html  package.json  pnpm-lock.yaml
pengwm-ui/src/: App.svelte  main.ts
pengwm-ui/src-tauri/: Cargo.toml  tauri.conf.json
pengwm-ui/src-tauri/icons/: icon.icns
pengwm-ui/src-tauri/src/: main.rs
src/: bsp.c  bsp.h  cli.c  cli.h  config.c  config.h  display.c  display.h  main.c  utils.c  utils.h  window.c  window.h  window_control.c  window_control.h  window_manager.c  window_manager.h
