[package]
name = "pengwm-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
euclid = "0.22"
petgraph = "0.6"
indextree = "4.6"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
interprocess = "1.2"
notify = "6.1"
async-trait = "0.1"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
crossbeam-channel = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_UI_Accessibility",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3.2", features = ["NSArray", "NSString", "NSNotification", "NSRunLoop"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication", "NSApplication"] }
core-foundation = "0.9"
accessibility-sys = "0.2"
rdev = "0.5" # for CGEventTap alternative or global hotkeys
