[package]
name = "pengwm-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
interprocess = "1.2"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
